Fixed the wrap and inmate details

--- a/src/app/intake/inmates-list/inmates-list.component.css
+++ b/src/app/intake/inmates-list/inmates-list.component.css
@@ -1,6 +1,10 @@
 .listOf {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: flex-start;
+  /* flex-direction: row; */
+  flex-wrap: wrap;
+  /* align-items: flex-start; */
+}
+
+.descOf {
+  word-wrap: break;
 }
